--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <div class="nav_menu" id="nav-menu">
                 <ul class="nav_list">
                     <li class="nav_item">
-                        <a href="#home" class="nav_link">Home</a>
+                        <a href="#home" class="nav_link active-link">Home</a>
                     </li>
                     <li class="nav_item">
                         <a href="#about" class="nav_link">About</a>
@@ -533,12 +533,16 @@
             </div>
         </div>
         <!-- ? Copyright license -->
-        <span class="footer_copy">
+        <!-- <span class="footer_copy">
             &#169; MiKe. All right reserved
-        </span>
+        </span> -->
     </footer>
 
     <!-- TODO ======================= SCROLL UP ======================= -->
+    <a href="#" class="scrollup" id="scroll-up">
+        <!-- ! Icon "panah keatas" dari website https://remixicon.com/, lalu search "arrow-up" -->
+        <i class="ri-arrow-up-line"></i>
+    </a>
 
     <!-- TODO ======================= SCROLL REVEAL ======================= -->
     <script src=""></script>
