--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 
     <!-- TODO ======================= SWIPER CSS ======================= -->
     <!-- ! Swiper dari website https://swiperjs.com/get-started#use-swiper-from-cdn -->
-    <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css" /> -->
-    <link rel="stylesheet" href="assets/css/swiper-bundle.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css" />
+    <!-- <link rel="stylesheet" href="assets/css/swiper-bundle.min.css"> -->
     <!-- TODO ======================= CSS ======================= -->
     <link rel="stylesheet" href="assets/css/styles.css">
 
@@ -545,12 +545,13 @@
     </a>
 
     <!-- TODO ======================= SCROLL REVEAL ======================= -->
-    <script src=""></script>
+    <!-- ! ScrollReveal dari website https://scrollrevealjs.org/guide/installation.html -->
+    <script src="https://unpkg.com/scrollreveal"></script>
 
     <!-- TODO ======================= SWIPER JS ======================= -->
     <!-- ! Swiper dari website https://swiperjs.com/get-started#use-swiper-from-cdn -->
-    <!-- <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script> -->
-    <script src="assets/js/swiper-bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
+    <!-- <script src="assets/js/swiper-bundle.min.js"></script> -->
 
     <!-- TODO ======================= MIXITUP JS ======================= -->
     <!-- ! MIXITUP dari website https://www.kunkalabs.com/mixitup/, lalu klik "download latest", kemudian masuk ke folder "dist", dan pilih "mixitup.min" -->
