--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                         <h3 class="home_car-name">BATTERY</h3>
                     </div>
                 </div>
-                <a href="#" class="home_button">START</a>
+                <a href="#about" class="home_button">START</a>
             </div>
         </section>
 
