--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <!-- TODO ======================= CSS ======================= -->
     <link rel="stylesheet" href="assets/css/styles.css">
 
-    <title>MiKe-ElectricVehicle</title>
+    <title>EVolution</title>
 </head>
 
 <body>
